--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -23,7 +23,6 @@
 <!-- Font-awesome -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
 <!-- MEUS CSS -->
 {% block css %}{% endblock css %}
 <style>
@@ -71,6 +70,7 @@ input {
 {% comment %} <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> {% endcomment %}
 <script type="text/javascript" src="{% static 'bootstrap/js/masks.js' %}"></script>
 <script type="text/javascript" src="{% static 'bootstrap/js/jquery.mask.min.js' %}"></script>
+<script src="{% static 'bootstrap/js/jquery.bootstrap.modal.forms.js' %}"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> 
 <script src="https://raw.githubusercontent.com/igorescobar/jQuery-Mask-Plugin/master/src/jquery.mask.js"></script>
 
