--- a/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
@@ -59,9 +59,9 @@
    <!-- https://www.schoolofnet.com/forum/topico/como-enviar-a-mensagem-de-sucesso-ou-erro-para-o-formulario-8495 -->    
 
     <div class="tab">
-        <button class="tablinks" onclick="openCity(event, 'Page1')">Empresa</button>        
+        <button class="tablinks active" onclick="openCity(event, 'Page1')">Empresa</button>        
         <button class="tablinks" onclick="openCity(event, 'Page2')">Representante</button>
-        <button class="tablinks" onclick="openCity(event, 'Page3')">Fiador</button>
+        {% comment %} <button class="tablinks" onclick="openCity(event, 'Page3')">Fiador</button> {% endcomment %}
     </div>
     
     <div id="Page1" class="tabcontent" style="display:block">
@@ -74,9 +74,8 @@
         {% endif %}
         {% csrf_token %}       
         <br>
-
         <h2>CADASTRO EMPRESA</h2>
-         <div class="row" > 
+        <div class="row" > 
             <div class="col-sm-6">                    
                 <div class="form-group" >                
                     <label for="" class="required" >{{form1.razao_social.label}} </label>        
@@ -104,8 +103,8 @@
             </div>  
             <div class="col-sm-5">                    
                 <div class="form-group" >                
-                    <label for="" class="required" >{{form1.form1a_constituicao.label}} </label>        
-                    {% render_field form.forma_constituicao class="form-control" %}
+                    <label for="" class="required" >{{form1.forma_constituicao.label}} </label>        
+                    {% render_field form1.forma_constituicao class="form-control" %}
                 </div>
             </div>    
             <div class="col-sm-6">                    
@@ -128,8 +127,8 @@
             </div> 
             <div class="col-sm-6">                    
                 <div class="form-group" >                
-                    <label for="" class="required" >{{form1.representante.label}} </label>        
-                    {% render_field form1.representante class="form-control" %}
+                    <label for="" class="required" >{{form1.fiador.label}} </label>        
+                    {% render_field form1.fiador class="form-control" %}
                 </div>
             </div>
         </div>    
@@ -228,7 +227,7 @@
                     {% render_field form1.obs_bancaria class="form-control" %}
                 </div>
             </div>
-        </div>  
+        </div>        
     </div> 
     {% comment %} REPRESENTANTE {% endcomment %}
      <div id="Page2" class="tabcontent">        
@@ -341,160 +340,17 @@
                     {% render_field form1.obs_bancaria class="form-control" %}
                 </div>
             </div>        
-        </div>          
+        </div>  
+            <div style='float: right;'>
+                <button class="btn btn-success" float="right">Cadastrar</button>
+            </div>
+        </form>        
+        </div>    
     </div> 
+    {% comment %}
     <div id="Page3" class="tabcontent">  
-        {% if cliente_cnpj %}     
-            <div class="col-sm-6">                    
-                <div class="form-group" >                
-                    <label for="" >{{form1.fiador.label}} </label>        
-                    {% render_field form1.fiador class="form-control" %}
-                </div>                    
-            </div>
-        {% else %}     
-        <div class="row">
-            <div class="col-sm-6">                    
-                <div class="form-group" >                
-                    <label for="" >{{form1.aval_razao_social.label}} </label>        
-                    {% render_field form1.aval_razao_social class="form-control" %}
-                </div>                    
-            </div>
-        {% endif %} 
-        {% if cliente_cnpj %} 
-            <div class="col-sm-6">                    
-                <div class="form-group" >                
-                    <label for="" >{{form2.fiador_copia.label}} </label>        
-                    {% render_field form2.fiador_copia class="form-control" %}
-                </div>                    
-            </div>
-            <div class="col-sm-6">                    
-                <div class="form-group" >                
-                    <label for="" >{{form2.fiador.label}} </label>        
-                    {% render_field form2.fiador class="form-control" %}
-                </div>                    
-            </div>
-        {% endif %} 
-            {% comment %} 
-            <div class="col-sm-3">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.fiador_cpf.label}} </label>        
-                    {% render_field form.fiador_cpf class="form-control cpf-mask" type="text" %}
-                </div>
-            </div>
-            <div class="col-sm-3">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.fiador_rg.label}} </label>        
-                    {% render_field form.fiador_rg class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-2">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.fiador_contato1.label}} </label>        
-                    {% render_field form.fiador_contato1 class="form-control phone-mask" type="text" %}
-                </div>
-            </div>
-            <div class="col-sm-2">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.fiador_celular1.label}} </label>        
-                    {% render_field form.fiador_celular1 class="form-control cel-phone-mask" type="text" %}
-                </div>
-            </div>
-            <div class="col-sm-2">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.fiador_celular2.label}} </label>        
-                    {% render_field form.fiador_celular2 class="form-control cel-phone-mask" type="text" %}
-                </div>
-            </div>
-            <div class="col-sm-6">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.email.label}} </label>        
-                    {% render_field form.email class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-2">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.fiador_cep.label}} </label>        
-                    {% render_field form.fiador_cep class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-5">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.fiador_rua.label}} </label>        
-                    {% render_field form.fiador_rua class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-5">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.fiador_bairro.label}} </label>        
-                    {% render_field form.fiador_bairro class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-3">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.fiador_cidade.label}} </label>        
-                    {% render_field form.fiador_cidade class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-2">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.fiador_uf.label}} </label>        
-                    {% render_field form.fiador_uf class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-1">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.fiador_numero_casa.label}} </label>        
-                    {% render_field form.fiador_numero_casa class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-5">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.fiador_ponto_referencia.label}} </label>        
-                    {% render_field form.fiador_ponto_referencia class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-2">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.agencia.label}} </label>        
-                    {% render_field form.agencia class="form-control" %}
-                </div>                    
-            </div>
-            <div class="col-sm-2">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.conta.label}} </label>        
-                    {% render_field form.conta class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-4">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.banco.label}} </label>        
-                    {% render_field form.banco class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-5">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.obs_bancaria.label}} </label>        
-                    {% render_field form.obs_bancaria class="form-control" %}
-                </div>
-            </div>{% endcomment %}
-        </div>        
-        <div style='float: right;'>
-            <button class="btn btn-success" float="right">Cadastrar</button>
-        </div>
-        </form> 
-       
+         {% endcomment %}
     </div>
-    
-    {% comment %} <script>
-        var cnpjcpf= $("#cpfcnpj").val().length;
-     
-        if(cnpjcpf < 11){
-            $("#cpfcnpj").mask("999.999.999-99");
-        } else {
-            $("#cpfcnpj").mask("99.999.999/9999-99");
-        } 
-    </script> {% endcomment %}
-
 {% endblock content %}
 
  
