--- a/projeto/cliente_cnpj/templates/cliente_cnpj_list.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_list.html
@@ -3,8 +3,8 @@
 {% block content %}
 
 <div class="class page-header">
-    <span class="float-right">
-        <a href="{% url 'cliente_cnpj:cliente_cnpj_cadastra'  %}" >
+    <span class="float-right">    
+        <a href="{% url 'core:fiador_decision' %}" >
             <button type="button" class="btn btn-success">
                 <span class="fa fa-plus"></span>Adicionar
             </button>
