Campos de endereço inseridos em avalista_form

--- a/projeto/avalista/templates/avalista_form.html
+++ b/projeto/avalista/templates/avalista_form.html
@@ -14,13 +14,13 @@
                     {% render_field form.fiador_nome class="form-control" %}
                 </div>    
             </div>  
-            <div class="col-sm-6">                    
+            <div class="col-sm-3">                    
                 <div class="form-group" >                
                     <label for="" >{{form.fiador_cpf.label}} </label>        
-                    {% render_field form.fiador_cpf class="form-control" %}
+                    {% render_field form.fiador_cpf class="form-control cpf-mask"%}
                 </div>    
             </div>  
-            <div class="col-sm-6">                    
+            <div class="col-sm-3">                    
                 <div class="form-group" >                
                     <label for="" >{{form.fiador_rg.label}} </label>        
                     {% render_field form.fiador_rg class="form-control" %}
@@ -32,36 +32,68 @@
                     {% render_field form.fiador_email class="form-control" %}
                 </div>    
             </div>  
-            <div class="col-sm-6">                    
+            <div class="col-sm-2">                    
                 <div class="form-group" >                
                     <label for="" >{{form.fiador_contato1.label}} </label>        
                     {% render_field form.fiador_contato1 class="form-control" %}
                 </div>    
             </div>  
-            <div class="col-sm-6">                    
+            <div class="col-sm-2">                    
                 <div class="form-group" >                
                     <label for="" >{{form.fiador_celular1.label}} </label>        
                     {% render_field form.fiador_celular1 class="form-control" %}
                 </div>    
             </div>  
-            <div class="col-sm-6">                    
+            <div class="col-sm-2">                    
                 <div class="form-group" >                
                     <label for="" >{{form.fiador_celular2.label}} </label>        
                     {% render_field form.fiador_celular2 class="form-control" %}
                 </div>    
-            </div>              
-            <div class="col-sm-6">                    
+            </div> 
+            {% comment %} ENDEREÇO INICIO {% endcomment %}
+            <div class="col-sm-2">                    
                 <div class="form-group" >                
-                    <label for="" >{{form.fiador_numero_casa.label}} </label>        
-                    {% render_field form.fiador_numero_casa class="form-control" %}
-                </div>    
-            </div>  
-            <div class="col-sm-6">                    
+                    <label for="" class="required">{{form.fiador_cep.label}} </label>        
+                    {% render_field form.fiador_cep class="form-control" name="cep" type="text" id="cep" value="" size="10" maxlength="9" onblur="pesquisacep(this.value);"%}                            
+                </div>
+            </div>
+            <div class="col-sm-4">                    
+                <div class="form-group" >                
+                    <label for="" class="required">{{form.fiador_rua.label}} </label>        
+                    {% render_field form.fiador_rua class="form-control" name="rua" type="text" id="rua" size="60" %}
+                </div>
+            </div>
+            <div class="col-sm-1">                    
+                <div class="form-group" >                
+                    <label for="" class="required">{{form.fiador_numero_casa.label}} </label>        
+                    {% render_field form.fiador_numero_casa class="form-control" name="rua" type="text" id="rua" size="60" %}
+                </div>
+            </div>
+            <div class="col-sm-5">                    
+                <div class="form-group" >                
+                    <label for="" class="required">{{form.fiador_bairro.label}} </label>        
+                    {% render_field form.fiador_bairro class="form-control" name="bairro" type="text" id="bairro" size="40" %}
+                </div>
+            </div>
+            <div class="col-sm-3">                    
+                <div class="form-group" >                
+                    <label for="" class="required">{{form.fiador_cidade.label}} </label>        
+                    {% render_field form.fiador_cidade class="form-control" name="cidade" type="text" id="cidade" size="40"%}
+                </div>
+            </div>
+            <div class="col-sm-2">                    
+                <div class="form-group" >                
+                    <label for="" class="required">{{form.fiador_uf.label}} </label>        
+                    {% render_field form.fiador_uf class="form-control" name="uf" type="text" id="uf" size="2"%}
+                </div>
+            </div>            
+            <div class="col-sm-5">                    
                 <div class="form-group" >                
                     <label for="" >{{form.fiador_ponto_referencia.label}} </label>        
                     {% render_field form.fiador_ponto_referencia class="form-control" %}
-                </div>    
-            </div>  
+                </div>
+            </div>               
+            {% comment %} ENDEREÇO FIM {% endcomment %}
             <div class="col-sm-6">                    
                 <div class="form-group" >                
                     <label for="" >{{form.fiador_agencia.label}} </label>        
