--- a/projeto/avalista/templates/avalista_form.html
+++ b/projeto/avalista/templates/avalista_form.html
@@ -126,7 +126,9 @@
             </div>  
         </div>  
         
-        <input type="submit" class="btn btn-info" value="Salvar">
+        <div style='float: right;'>
+                <button class="btn btn-success" float="right">Cadastrar</button>
+        </div>
     </form>
 
 {% endblock content %}
