model de referencias inseridos em cliente_cnpj

--- a/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
@@ -241,6 +241,30 @@
                 </div>
             </div>
         </div>  
+        <hr>
+            <h3>REFERÊNCIAS</h3>  
+        <hr/>
+        <div class="row">            
+            <div class="col-sm-4">                    
+                <div class="form-group" >                
+                    <label for="" >{{form.ref1_nome.label}} </label>        
+                    {% render_field form.ref1_nome class="form-control" %}
+                </div>
+            </div>
+            <div class="col-sm-4">                    
+                <div class="form-group" >                
+                    <label for="" >{{form.ref1_contato1.label}} </label>        
+                    {% render_field form.ref1_contato1 class="form-control" %}
+                </div>
+            </div>
+            <div class="col-sm-4">                    
+                <div class="form-group" >                
+                    <label for="" >{{form.ref1_parentesco.label}} </label>        
+                    {% render_field form.ref1_parentesco class="form-control" %}
+                </div>
+            </div>
+
+        </div>
     </div> 
     {% comment %} REPRESENTANTE {% endcomment %}
      <div id="Page2" class="tabcontent">        
