--- a/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
@@ -253,14 +253,32 @@
             </div>
             <div class="col-sm-4">                    
                 <div class="form-group" >                
-                    <label for="" >{{form.ref1_contato1.label}} </label>        
-                    {% render_field form.ref1_contato1 class="form-control" %}
+                    <label for="" >{{form.ref1_contato.label}} </label>        
+                    {% render_field form.ref1_contato class="form-control" %}
                 </div>
             </div>
             <div class="col-sm-4">                    
                 <div class="form-group" >                
                     <label for="" >{{form.ref1_parentesco.label}} </label>        
                     {% render_field form.ref1_parentesco class="form-control" %}
+                </div>
+            </div>
+            <div class="col-sm-4">                    
+                <div class="form-group" >                
+                    <label for="" >{{form.ref2_nome.label}} </label>        
+                    {% render_field form.ref2_nome class="form-control" %}
+                </div>
+            </div>
+            <div class="col-sm-4">                    
+                <div class="form-group" >                
+                    <label for="" >{{form.ref2_contato.label}} </label>        
+                    {% render_field form.ref2_contato class="form-control" %}
+                </div>
+            </div>
+            <div class="col-sm-4">                    
+                <div class="form-group" >                
+                    <label for="" >{{form.ref2_parentesco.label}} </label>        
+                    {% render_field form.ref2_parentesco class="form-control" %}
                 </div>
             </div>
 
