--- a/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
@@ -6,7 +6,7 @@
 <style>
 
     h3{
-        background-color: rgb(233, 220, 220);
+        background-color: rgb(233, 233, 233);
     }
     
     body {font-family: Arial;}
@@ -254,7 +254,7 @@
             <div class="col-sm-4">                    
                 <div class="form-group" >                
                     <label for="" >{{form.ref1_contato.label}} </label>        
-                    {% render_field form.ref1_contato class="form-control" %}
+                    {% render_field form.ref1_contato class="form-control cel-phone-mask" %}
                 </div>
             </div>
             <div class="col-sm-4">                    
@@ -272,7 +272,7 @@
             <div class="col-sm-4">                    
                 <div class="form-group" >                
                     <label for="" >{{form.ref2_contato.label}} </label>        
-                    {% render_field form.ref2_contato class="form-control" %}
+                    {% render_field form.ref2_contato class="form-control cel-phone-mask" %}
                 </div>
             </div>
             <div class="col-sm-4">                    
