mascaras de telefone em avalista_form.html

--- a/projeto/avalista/templates/avalista_form.html
+++ b/projeto/avalista/templates/avalista_form.html
@@ -35,19 +35,19 @@
             <div class="col-sm-2">                    
                 <div class="form-group" >                
                     <label for="" >{{form.fiador_contato1.label}} </label>        
-                    {% render_field form.fiador_contato1 class="form-control" %}
+                    {% render_field form.fiador_contato1 class="form-control phone-mask" %}
                 </div>    
             </div>  
             <div class="col-sm-2">                    
                 <div class="form-group" >                
                     <label for="" >{{form.fiador_celular1.label}} </label>        
-                    {% render_field form.fiador_celular1 class="form-control" %}
+                    {% render_field form.fiador_celular1 class="form-control cel-phone-mask" %}
                 </div>    
             </div>  
             <div class="col-sm-2">                    
                 <div class="form-group" >                
                     <label for="" >{{form.fiador_celular2.label}} </label>        
-                    {% render_field form.fiador_celular2 class="form-control" %}
+                    {% render_field form.fiador_celular2 class="form-control cel-phone-mask" %}
                 </div>    
             </div> 
             {% comment %} ENDEREÇO INICIO {% endcomment %}
