dados bancários removidos de representante+

--- a/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
@@ -325,8 +325,8 @@
             </div>
             <div class="col-sm-6">                    
                 <div class="form-group" >                
-                    <label for="" >{{form.email.label}} </label>        
-                    {% render_field form.email class="form-control" %}
+                    <label for="" >{{form.rep_email.label}} </label>        
+                    {% render_field form.rep_email class="form-control" %}
                 </div>
             </div>
             <div class="col-sm-2">                    
@@ -370,31 +370,7 @@
                     <label for="" >{{form.rep_ponto_referencia.label}} </label>        
                     {% render_field form.rep_ponto_referencia class="form-control" %}
                 </div>
-            </div>
-            <div class="col-sm-2">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.agencia.label}} </label>        
-                    {% render_field form.agencia class="form-control" %}
-                </div>                    
-            </div>
-            <div class="col-sm-2">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.conta.label}} </label>        
-                    {% render_field form.conta class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-4">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.banco.label}} </label>        
-                    {% render_field form.banco class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-5">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.obs_bancaria.label}} </label>        
-                    {% render_field form.obs_bancaria class="form-control" %}
-                </div>
-            </div>        
+            </div>            
         </div>  
             <div style='float: right;'>
                 <button class="btn btn-success" float="right">Cadastrar</button>
