Reestruturando o contrato para os dois clientes

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -282,9 +282,9 @@ window.onload = function imprimir(){
     var cnpj_email           = "{{object.cliente_cnpj.email}}"
 
     //VARIÁVEIS DO CLIENTE CNPJ(REPRESENTANTE)
-    var representante               = "{{object.cliente_cnpj.representante.nome}}"
-    var representante_cpf           = "{{object.cliente_cnpj.representante.cpf}}"
-    var representante_rg            = "{{object.cliente_cnpj.representante.rg}}"
+    var representante               = "{{object.cliente_cnpj.rep_nome}}"
+    var representante_cpf           = "{{object.cliente_cnpj.rep_cpf}}"
+    var representante_rg            = "{{object.cliente_cnpj.rep_rg}}"
     var representante_nacionalidade = "{{object.cliente_cnpj.representante.nacionalidade}}"
     var representante_estado_civil  = "{{object.cliente_cnpj.representante.estado_civil}}"
     var representante_rua           = "{{object.cliente_cnpj.representante.rua}}"
