Inserido models ausentes em fiador e representante

--- a/projeto/avalista/templates/avalista_form.html
+++ b/projeto/avalista/templates/avalista_form.html
@@ -32,6 +32,18 @@
                     {% render_field form.fiador_org_emissor  class="form-control" %}
                 </div>    
             </div>  
+            <div class="col-sm-2">                    
+                <div class="form-group" >                
+                    <label for="" >{{form.fiador_estado_civil.label}} </label>        
+                    {% render_field form.fiador_estado_civil  class="form-control" %}
+                </div>    
+            </div>  
+            <div class="col-sm-2">                    
+                <div class="form-group" >                
+                    <label for="" >{{form.fiador_nacionalidade.label}} </label>        
+                    {% render_field form.fiador_nacionalidade  class="form-control" %}
+                </div>    
+            </div>  
             <div class="col-sm-4">                    
                 <div class="form-group" >                
                     <label for="" >{{form.fiador_email.label}} </label>        
